--- a/Brain_tumour_classifer_from_scratch.ipynb
+++ b/Brain_tumour_classifer_from_scratch.ipynb
@@ -14,7 +14,7 @@
     "tags": []
    },
    "source": [
-    "# **Exploring the benefits of transfer learning while building brain tumour classifiers A comparative analysis of DL techniques** ⚖️\n",
+    "# **Exploring the Benefits of Transfer Learning While Building Brain Tumour Classifiers: A Comparative Analysis of DL Techniques** ⚖️\n",
     "\n",
     "AI is huge. There are a lot of different models, parameters, and even subparameters to choose from. For image classification tasks, CNN-based models from scratch, and with transfer learning are currently the two most popular selections.\n",
     "\n",
